# cs350-snapplate

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SnapPlate Frontend Design _standalone_.html  api-mvp.md  juneha-algorithm.md  minjae-backend.md  pyproject.toml  team6-final-meeting-plan.md
algorithm/: __init__.py  config.py  contract.py  embedding.py  entry_profiling.py  providers.py  pyproject.toml  restaurant_profiling.py  schemas.py  taxonomy.py  user_profiling.py
algorithm/algorithm/: __init__.py  config.py  contract.py  embedding.py  entry_profiling.py  evaluation.py  providers.py  restaurant_profiling.py  schemas.py  taxonomy.py  user_profiling.py  version.py
algorithm/algorithm/fixtures/: synthetic.py
algorithm/fixtures/: __init__.py  demo_context.json
algorithm/tests/: test_algorithm_contract.py  test_algorithm_entry_profiling.py  test_algorithm_fixtures.py  test_algorithm_provider.py  test_algorithm_recommendation_evaluation.py  test_algorithm_restaurant_profiling.py  test_algorithm_scaffold.py  test_algorithm_taxonomy.py  test_algorithm_user_profiling.py
backend/: .env.example  .gitignore  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/config/: algorithm.py  algorithm_taxonomy.py  auth.py  auth_middleware.py  env.py  http_client.py  http_errors.py  jwt.py  lifespan.py  logger.py
backend/app/controllers/: auth.py  bookmarks.py  drafts.py  entries.py  home.py  me.py  media.py  restaurants.py  settings.py  taste.py
backend/app/dto/: auth.py  base.py  bookmark.py  draft.py  entry.py  media.py  restaurant.py  settings.py  taste.py  user.py
backend/app/models/: __init__.py  algorithm_artifact.py  base.py  bookmark.py  draft.py  entry.py  (+9 more)
backend/db/: env.py
backend/scripts/: seed_demo.py  seed_demo_data.py
backend/tests/: conftest.py  test_algorithm_artifacts.py  test_algorithm_backend_scaffold.py  test_algorithm_contract.py  test_algorithm_diary_inputs.py  test_algorithm_entry_profiling.py  test_algorithm_evaluation.py  test_algorithm_fixtures.py  test_algorithm_inputs.py  test_algorithm_provider.py  test_algorithm_provider_openai.py  test_algorithm_recommendation_evaluation.py  test_algorithm_recommendations.py  test_algorithm_restaurant_integration.py  test_algorithm_restaurant_profiling.py  test_algorithm_taste.py  test_algorithm_taste_jobs.py  test_algorithm_taxonomy.py  test_algorithm_user_profiling.py  test_auth.py  test_capture_flow.py  test_kakao_category_normalization.py  test_profile_settings.py  test_recommendation_service.py  test_restaurant_service.py  test_restaurants_bookmarks.py  test_seed_demo.py  test_seed_demo_data.py  test_taste_recommendations.py  test_taste_service.py
(+150 files in other folders)
