[project]
name = "algorithm"
version = "0.1.0"
description = "SnapPlate algorithm contract schemas and entrypoints"
requires-python = ">=3.11"
dependencies = [
    "openai>=2,<3",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["algorithm*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
algorithm = ["fixtures/*.json"]
