[project]
name = "snapplate-backend"
version = "0.1.0"
description = "SnapPlate backend service (FastAPI, self-hosted)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.31",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "httpx>=0.27",
    "aioboto3>=13",
    "pillow>=10",
    "pyjwt>=2.9",
    "tenacity>=9",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    # Algorithm package, imported in-process. Path dependency on the sibling repo dir.
    "snapplate",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1",
]

[tool.uv.sources]
snapplate = { path = "..", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "db"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
